[package]
name = "cargo-bounds"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "Find and test dependency versions bounds."
readme = "README.md"

[dependencies]
anyhow = { version = "1.0.14" }
clap = { version = "4.0.0", features = ["derive"] }
crates_io_api = ">=0.6.0, <=0.11.0"
ctrlc = "3.0.2"
indicatif = "0.17.0"
owo-colors = { version = ">=1.0.0, <5", default-features = false }
semver = ">=0.1.20, <2"
toml_edit = "0.22.21"
