[package]
name = "cargo-bounds"
version = "0.2.3"
edition = "2024"
license = "MIT"
description = "Find and test dependency versions bounds."
readme = "README.md"
repository = "https://github.com/vivax3794/cargo_bounds"

[dependencies]
anyhow = { version = "1.0.14" }
clap = { version = "4.0.0", features = ["derive"] }
crates_io_api = "0.11.0"
ctrlc = "3.0.2"
indicatif = "0.17.0"
owo-colors = { version = "4.0.0", default-features = false }
semver = "1.0.0"
toml_edit = "0.22.21"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
